--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -738,6 +738,72 @@
             </objects>
             <point key="canvasLocation" x="-710" y="-738"/>
         </scene>
+        <!--Reward Store Loading Page-->
+        <scene sceneID="EtN-HD-hfn">
+            <objects>
+                <viewController title="Reward Store Loading Page" id="vKd-UR-rI9" customClass="rewardStoreLoadingPageViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="wQW-2q-psC">
+                        <rect key="frame" x="0.0" y="20" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="There's no available rewards at this time." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" preferredMaxLayoutWidth="313" translatesAutoresizingMaskIntoConstraints="NO" id="evK-pq-fvp">
+                                <rect key="frame" x="4" y="215" width="313" height="73"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="73" type="user" id="UHC-E7-QqM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4ib-rs-OfH">
+                                <rect key="frame" x="155" y="441" width="157" height="44"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <state key="normal" title="Check for Goods Info List">
+                                    <color key="titleColor" red="0.19607843137254902" green="0.30980392156862746" blue="0.52156862745098043" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="checkForGoodsInfoList:" destination="vKd-UR-rI9" eventType="touchUpInside" id="HNE-rJ-KDY"/>
+                                </connections>
+                            </button>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error occurs. Try again." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" useAutomaticPreferredMaxLayoutWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gum-lW-iMp">
+                                <rect key="frame" x="70" y="241" width="181" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="181" id="47d-rF-xa5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottomMargin" secondItem="4ib-rs-OfH" secondAttribute="bottom" constant="20" type="user" id="Dsl-aP-Fy8"/>
+                            <constraint firstAttribute="centerX" secondItem="gum-lW-iMp" secondAttribute="centerX" constant="-0.5" type="user" id="Dtq-km-07l"/>
+                            <constraint firstItem="evK-pq-fvp" firstAttribute="top" secondItem="wQW-2q-psC" secondAttribute="top" constant="215" type="user" id="IFW-1H-ClI"/>
+                            <constraint firstItem="evK-pq-fvp" firstAttribute="centerX" secondItem="wQW-2q-psC" secondAttribute="centerX" type="user" id="M2v-9L-8dx"/>
+                            <constraint firstAttribute="centerY" secondItem="gum-lW-iMp" secondAttribute="centerY" constant="0.5" type="user" id="RTn-0z-b31"/>
+                            <constraint firstItem="4ib-rs-OfH" firstAttribute="leading" secondItem="wQW-2q-psC" secondAttribute="leading" constant="155" type="user" id="YMZ-wR-XwD"/>
+                            <constraint firstAttribute="bottom" secondItem="4ib-rs-OfH" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="e4u-zz-6m2"/>
+                            <constraint firstAttribute="centerY" secondItem="evK-pq-fvp" secondAttribute="centerY" constant="0.5" type="user" id="l2h-Bp-iH6"/>
+                            <constraint firstItem="gum-lW-iMp" firstAttribute="centerY" secondItem="evK-pq-fvp" secondAttribute="centerY" type="user" id="pxL-eb-j5b"/>
+                            <constraint firstItem="gum-lW-iMp" firstAttribute="centerX" secondItem="evK-pq-fvp" secondAttribute="centerX" type="user" id="uux-sq-4cc"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="q9M-QM-F51"/>
+                    <connections>
+                        <outlet property="errorLabel" destination="gum-lW-iMp" id="LWw-G3-c2i"/>
+                        <outlet property="goodsInfoListNotAvailableLabel" destination="evK-pq-fvp" id="dNr-v6-lG2"/>
+                        <segue destination="Wos-nM-bb1" kind="push" identifier="showRewardStorePageViewController" id="N0a-6X-tNc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YB9-kM-Rfu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1078" y="-1377"/>
+        </scene>
         <!--Reward Store Page View Controller-->
         <scene sceneID="APK-uK-XEC">
             <objects>
@@ -1100,7 +1166,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="Wos-nM-bb1" kind="push" identifier="showRewardStorePageViewController" id="9F4-64-UbA"/>
+                                    <segue destination="vKd-UR-rI9" kind="push" identifier="showRewardStoreLoadingPageViewController" id="rZT-Sz-3xj"/>
                                 </connections>
                             </button>
                             <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="lgj-ki-JdJ">
