--- a/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
+++ b/demoApp/demoApp/en.lproj/MainStoryboard.storyboard
@@ -545,7 +545,6 @@
         <!--Mainmenu Nav UI Controller-->
         <scene sceneID="EEa-jg-gqq">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="nWb-fu-Eb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController title="Mainmenu Nav UI Controller" id="7s1-CK-cW9" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" id="TiC-Ya-cue"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JJS-9c-Rq5">
@@ -556,6 +555,7 @@
                         <segue destination="26S-FX-YoR" kind="relationship" relationship="rootViewController" id="BRY-dH-6th"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nWb-fu-Eb1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-485" y="-44"/>
         </scene>
@@ -792,6 +792,20 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KYu-xx-0PF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-710" y="-1377"/>
+        </scene>
+        <!--Blank ViewUIController-->
+        <scene sceneID="agx-tc-qZP">
+            <objects>
+                <viewController storyboardIdentifier="blankViewUIController" title="Blank ViewUIController" id="hva-s7-P4S" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MbZ-if-sHb">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZK3-ab-8YS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="736" y="-1361"/>
         </scene>
         <!--Quest / Mission Demo-->
         <scene sceneID="cWx-Z5-C6U">
